--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Vandals -- Fiction'
 - !lcsh 'Africa, North -- History -- 647-1517 -- Fiction'
 - !lcc 'PT'
+- GITenberg
 title: The Scarlet Banner
 url: http://www.gutenberg.org/ebooks/32461
